// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TextBox component The Rendered HTML should have a label 1`] = `
<div
  class="form-row_container"
>
  <label>
    My Label
    <input
      type="text"
      value=""
    />
  </label>
</div>
`;

exports[`TextBox component handling input should return the updated value when changed 1`] = `
<div
  class="form-row_container"
>
  <label>
    My Label
    <input
      type="text"
      value="Updated Value"
    />
  </label>
</div>
`;

exports[`TextBox component handling input should set a value when passed in 1`] = `
<div
  class="form-row_container"
>
  <label>
    My Label
    <input
      type="text"
      value="My Input Value"
    />
  </label>
</div>
`;

exports[`TextBox component handling input should update a value when changed 1`] = `
<div
  class="form-row_container"
>
  <label>
    My Label
    <input
      type="text"
      value="Updated Value"
    />
  </label>
</div>
`;
